@@ -1,3 +1,8 @@
+2006-01-19  Richard Sandiford  <richard@codesourcery.com>
+
+	PR c/25805
+	* gcc.dg/pr25805.c: New file.
+
 2006-01-18  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/25836
